--- a/DocumentsManager-repository-s3/build.gradle
+++ b/DocumentsManager-repository-s3/build.gradle
@@ -49,6 +49,7 @@ waterDescriptor {
 
     properties {
         property('it.water.storage.endpoint') {
+            name         = 'S3 Endpoint'
             type         = 'url'
             envVar       = 'WATER_S3_ENDPOINT'
             required     = true
@@ -57,6 +58,7 @@ waterDescriptor {
             description  = 'S3-compatible endpoint URL (empty for AWS default; http://localhost:9000 for MinIO)'
         }
         property('it.water.storage.access-key') {
+            name         = 'Access Key'
             type         = 'string'
             envVar       = 'WATER_S3_ACCESS_KEY'
             required     = true
@@ -65,6 +67,7 @@ waterDescriptor {
             description  = 'S3 access key ID'
         }
         property('it.water.storage.secret-key') {
+            name         = 'Secret Key'
             type         = 'password'
             envVar       = 'WATER_S3_SECRET_KEY'
             required     = true
@@ -73,6 +76,7 @@ waterDescriptor {
             description  = 'S3 secret access key'
         }
         property('it.water.storage.region') {
+            name         = 'AWS Region'
             type         = 'string'
             envVar       = 'WATER_S3_REGION'
             required     = true
@@ -81,6 +85,7 @@ waterDescriptor {
             description  = 'AWS region (e.g., us-east-1)'
         }
         property('it.water.storage.bucket') {
+            name         = 'Bucket Name'
             type         = 'string'
             envVar       = 'WATER_S3_BUCKET'
             required     = true
@@ -89,6 +94,7 @@ waterDescriptor {
             description  = 'S3 bucket name for document storage'
         }
         property('it.water.storage.path-style-enabled') {
+            name         = 'Path Style Access'
             type         = 'boolean'
             envVar       = 'WATER_S3_PATH_STYLE_ENABLED'
             required     = false
